--- a/DataUploader/ExportForm.xaml
+++ b/DataUploader/ExportForm.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="DataUploader.ProgressBarForm"
+﻿<Window x:Class="DataUploader.ExportForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DataUploader"
-        ResizeMode="NoResize"
-        Title="Выполнение операции" MinWidth="250" HorizontalAlignment="Left" VerticalAlignment="Top" Icon="/Properties/process_96.png" Margin="0,0,0,0" Closing="FormClosing" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight">
+        mc:Ignorable="d"
+        Title="Экспорт данных" MinWidth="250" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
     <Grid>
 
         <StackPanel Margin="20,10,20,20">
@@ -14,8 +14,8 @@
                 <TextBlock x:Name="tbTimePassed" HorizontalAlignment="Right" Margin="0,0,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top" FontSize="10" DockPanel.Dock="Right"/>
             </DockPanel>
             <ProgressBar x:Name="pbProcessProgress" Height="12" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-            <TextBlock x:Name="tbFileInProcess" HorizontalAlignment="Left" Margin="0,5,0,0" TextWrapping="Wrap" Text="Имя: ..." VerticalAlignment="Top" TextTrimming="WordEllipsis" FontSize="10"/>
-            <TextBlock x:Name="tbFilesLeft" HorizontalAlignment="Left" Margin="0,2,0,0" TextWrapping="Wrap" Text="Осталось элементов: ..." VerticalAlignment="Top" FontSize="10"/>
+            <TextBlock x:Name="tbFileInProcess" HorizontalAlignment="Left" Margin="0,5,0,0" TextWrapping="NoWrap" Text="Имя: ..." VerticalAlignment="Top" TextTrimming="WordEllipsis" FontSize="10"/>
+            <TextBlock x:Name="tbRowsLeft" HorizontalAlignment="Left" Margin="0,2,0,0" TextWrapping="Wrap" Text="Осталось строк: ..." VerticalAlignment="Top" FontSize="10"/>
             <Button x:Name="btnCancel" Content="Отмена" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" Margin="0,10,0,0" Grid.ColumnSpan="2" Click="CancelOperation"/>
             
             <StackPanel Margin="0,-65,0,0">
@@ -36,5 +36,6 @@
             </StackPanel>
         
         </StackPanel>
+
     </Grid>
 </Window>
