--- a/DataUploader/TypeNameForm.xaml
+++ b/DataUploader/TypeNameForm.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DataUploader.ApplyBox"
+﻿<Window x:Class="DataUploader.TypeNameForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
         Title="Добавление элемента" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterOwner" Closing="FormClosing" Icon="/Properties/add_48.png">
     <Grid>
         <StackPanel Margin="20,5,20,20" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Введите название узла:"/>
+            <TextBlock Text="Введите название:"/>
             <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                 <TextBox x:Name="tbTypedNodeName" Text="" Width="150" VerticalAlignment="Top" Height="19.96"/>
                 <Button x:Name="btnApplyNodeName" Content="Добавить..." Margin="10,0,0,0" Click="ApplyNodeName" IsDefault="True"/>
